--- a/site/routes_examples_edit_row.templ
+++ b/site/routes_examples_edit_row.templ
@@ -69,7 +69,7 @@ templ EditRowContact(contacts []*ContactEdit, i int, isEditingRow, isEditingAnyR
 				<button
 					class="btn btn-sm btn-accent"
 					data-on-click={ fmt.Sprintf(
-						"editRowIndex.value = %d; %s", i,
+						"editRowIndex = %d; %s", i,
 						datastar.GetSSE("/examples/edit_row/edit"),
 					) }
 					data-testid={ contactKeyPrefix + "_edit" }
