--- a/site/routes_examples_file_upload.templ
+++ b/site/routes_examples_file_upload.templ
@@ -32,7 +32,7 @@ templ FileUploadView(signals *FileUploadSignals) {
 		<button
 			class="btn btn-primary"
 			data-on-click={ datastar.PostSSE("/examples/file_upload/upload") }
-			data-show="!!files.value?.length"
+			data-show="!!files?.length"
 		>
 			Submit
 		</button>
