--- a/site/routes_examples_toggle_visibility.templ
+++ b/site/routes_examples_toggle_visibility.templ
@@ -12,11 +12,11 @@ templ ToggleVisibilityView(signals *ShowSignals) {
 	>
 		<button
 			class="btn btn-primary"
-			data-on-click="bindBool=!bindBool"
+			data-on-click="$bindBool=!$bindBool"
 		>
 			Toggle
 		</button>
-		<div data-show="bindBool">
+		<div data-show="$bindBool">
 			Hello!
 		</div>
 	</div>
