--- a/site/routes_home.templ
+++ b/site/routes_home.templ
@@ -14,7 +14,7 @@ templ Home() {
 	{{
 		usageSample := `<input data-bind-title />
 <div data-text="$title.toUpperCase()"></div>
-<button data-on-click="@sse('/endpoint', {method: 'post'})">Save</button>`
+<button data-on-click="@post('/endpoint')">Save</button>`
 	}}
 	@Page(
 		"Datastar - The hypermedia framework.",
