--- a/site/routes_errors_internal.templ
+++ b/site/routes_errors_internal.templ
@@ -1,6 +1,6 @@
 package site
 
-templ internalArgs(info InternalErrorInfo) {
+templ internalArgs(info *InternalErrorInfo) {
 	<div>
 		<h3>Internal Error</h3>
 		<pre>
@@ -9,7 +9,7 @@ templ internalArgs(info InternalErrorInfo) {
 	</div>
 }
 
-templ InternalErrorView(name string, info InternalErrorInfo) {
+templ InternalErrorView(name string, info *InternalErrorInfo) {
 	@ErrorView("Internal", name, internalArgs(info)) {
 		<h1>If you are seeing this please file an issue on Github or better yet discuss on the Discord server</h1>
 	}
